--- a/views/patients_mode.handlebars
+++ b/views/patients_mode.handlebars
@@ -6,9 +6,13 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+        <script type="text/javascript" src="js/plugins/daterangepicker/daterangepicker.js"></script>
+        <script type='text/javascript' src='js/plugins/bootstrap/bootstrap-datepicker.js'></script>
+        <script type="text/javascript" src="js/plugins.js"></script>
+        <script type="text/javascript" src="js/actions.js"></script>
 
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
         <!-- END META SECTION -->
@@ -30,6 +34,25 @@
             </div>
             {{/if}}
             <div class="login-box animated fadeInDown">
+                <!-- START CLOCK WRAPPER -->
+                <div class="page-content-wrap">
+
+                    <!-- START WIDGETS -->
+                    <div class="row">
+
+                        <div class="col-md-12">
+
+                            <!-- START WIDGET CLOCK -->
+                            <div class="widget widget-danger widget-padding-sm">
+                                <div class="widget-big-int plugin-clock">00:00</div>
+                                <div class="widget-subtitle plugin-date">Loading...</div>
+                            </div>
+                            <!-- END WIDGET CLOCK -->
+
+                        </div>
+                    </div>
+                </div>
+                <!-- END CLOCK WRAPPER-->
                 <div class="login-logo"></div>
                 <div class="login-body">
                     <div class="login-title"><strong>Check In</strong></div>
@@ -50,15 +73,16 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-6">
+                        <div class="col-lg-6 col-lg-offset-3">
                             <button class="btn btn-info btn-block">Check In</button>
                         </div>
                     </div>
                     </form>
                 </div>
+
                 <div class="login-footer">
                     <div class="pull-left">
-                        &copy; 2014 AppName
+                        &copy; 2016 Receptional
                     </div>
                     <div class="pull-right">
                         <a href="/about">About</a> |
@@ -67,9 +91,8 @@
                     </div>
                 </div>
             </div>
-            
         </div>
-        
+
     </body>
 </html>
 
