--- a/views/account/signup.handlebars
+++ b/views/account/signup.handlebars
@@ -55,11 +55,11 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-6">
-                            <button type="reset" class="btn btn-primary btn-block">Clear</button>
+                        <div class="col-md-5 col-md-offset-1">
+                            <button type="reset" class="btn btn-primary btn-block">Clear Input</button>
                         </div>
-                        <div class="col-md-6">
-                            <button type="submit" class="btn btn-success btn-block">Sign Up</button>
+                        <div class="col-md-5 col-md-offset-0">
+                            <button type="submit" class="btn btn-success btn-block">Sign Up!</button>
                         </div>
                     </div>
                     </form>
