--- a/views/subdomain_login.handlebars
+++ b/views/subdomain_login.handlebars
@@ -35,15 +35,15 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-6">
-                            <button class="btn btn-info btn-block">Login</button>
+                        <div class="col-lg-6 col-lg-offset-3">
+                            <button class="btn btn-primary btn-block">Search</button>
                         </div>
                     </div>
                     </form>
                 </div>
                 <div class="login-footer">
                     <div class="pull-left">
-                        &copy; 2016 AppName
+                        &copy; 2016 Receptional
                     </div>
                     <div class="pull-right">
                         <a href="/about">About</a> |
