user images. uploaded temp logo

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -133,6 +133,22 @@
                         </div>
                     </div>
 
+                    <div class="row ">
+
+                        <div class="col-md-3 col-sm-3 col-xs-3">
+                            <div class="text-column text-column-centralized this-animate" data-animate="fadeIn">
+                                <div class="text-column-image">
+                                    <img src="assets/img/users/user.jpg" alt="John Doe" class="img-circle">
+                                </div>
+                                <h5>John Doe</h5>
+                                <div class="text-column-subtitle">UI/UX Designer</div>
+                                <div class="text-column-info">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras molestie dapibus nulla sed pellentesque.
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
                     <div class="row">
 
                         <div class="col-md-3 col-sm-3 col-xs-3">
@@ -151,7 +167,7 @@
                         <div class="col-md-3 col-sm-3 col-xs-3">
                             <div class="text-column text-column-centralized this-animate" data-animate="fadeIn">
                                 <div class="text-column-image">
-                                    <img src="assets/img/users/user.jpg" alt="Dmitry Ivaniuk" class="img-circle">
+                                    <img src="assets/img/users/user3.jpg" alt="Dmitry Ivaniuk" class="img-circle">
                                 </div>
                                 <h5>Dmitry Ivaniuk</h5>
                                 <div class="text-column-subtitle">Web Developer</div>
@@ -164,7 +180,7 @@
                         <div class="col-md-3 col-sm-3 col-xs-3">
                             <div class="text-column text-column-centralized this-animate" data-animate="fadeIn">
                                 <div class="text-column-image">
-                                    <img src="assets/img/users/user3.jpg" alt="Nadia Ali" class="img-circle">
+                                    <img src="assets/img/users/user4.jpg" alt="Nadia Ali" class="img-circle">
                                 </div>
                                 <h5>Nadia Ali</h5>
                                 <div class="text-column-subtitle">Singer &amp; Songwriter</div>
@@ -177,7 +193,117 @@
                         <div class="col-md-3 col-sm-3 col-xs-3">
                             <div class="text-column text-column-centralized this-animate" data-animate="fadeIn">
                                 <div class="text-column-image">
-                                    <img src="assets/img/users/user4.jpg" alt="Brad Pitt" class="img-circle">
+                                    <img src="assets/img/users/user5.jpg" alt="Brad Pitt" class="img-circle">
+                                </div>
+                                <h5>Brad Pitt</h5>
+                                <div class="text-column-subtitle">Actor &amp; Producer</div>
+                                <div class="text-column-info">
+                                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="row">
+
+                        <div class="col-md-3 col-sm-3 col-xs-3">
+                            <div class="text-column text-column-centralized this-animate" data-animate="fadeIn">
+                                <div class="text-column-image">
+                                    <img src="assets/img/users/user6.jpg" alt="John Doe" class="img-circle">
+                                </div>
+                                <h5>John Doe</h5>
+                                <div class="text-column-subtitle">UI/UX Designer</div>
+                                <div class="text-column-info">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras molestie dapibus nulla sed pellentesque.
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-3 col-sm-3 col-xs-3">
+                            <div class="text-column text-column-centralized this-animate" data-animate="fadeIn">
+                                <div class="text-column-image">
+                                    <img src="assets/img/users/user7.jpg" alt="Dmitry Ivaniuk" class="img-circle">
+                                </div>
+                                <h5>Dmitry Ivaniuk</h5>
+                                <div class="text-column-subtitle">Web Developer</div>
+                                <div class="text-column-info">
+                                    Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-3 col-sm-3 col-xs-3">
+                            <div class="text-column text-column-centralized this-animate" data-animate="fadeIn">
+                                <div class="text-column-image">
+                                    <img src="assets/img/users/user8.jpg" alt="Nadia Ali" class="img-circle">
+                                </div>
+                                <h5>Nadia Ali</h5>
+                                <div class="text-column-subtitle">Singer &amp; Songwriter</div>
+                                <div class="text-column-info">
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-3 col-sm-3 col-xs-3">
+                            <div class="text-column text-column-centralized this-animate" data-animate="fadeIn">
+                                <div class="text-column-image">
+                                    <img src="assets/img/users/user9.jpg" alt="Brad Pitt" class="img-circle">
+                                </div>
+                                <h5>Brad Pitt</h5>
+                                <div class="text-column-subtitle">Actor &amp; Producer</div>
+                                <div class="text-column-info">
+                                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="row">
+
+                        <div class="col-md-3 col-sm-3 col-xs-3">
+                            <div class="text-column text-column-centralized this-animate" data-animate="fadeIn">
+                                <div class="text-column-image">
+                                    <img src="assets/img/users/user10.jpg" alt="John Doe" class="img-circle">
+                                </div>
+                                <h5>John Doe</h5>
+                                <div class="text-column-subtitle">UI/UX Designer</div>
+                                <div class="text-column-info">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras molestie dapibus nulla sed pellentesque.
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-3 col-sm-3 col-xs-3">
+                            <div class="text-column text-column-centralized this-animate" data-animate="fadeIn">
+                                <div class="text-column-image">
+                                    <img src="assets/img/users/user11.jpg" alt="Dmitry Ivaniuk" class="img-circle">
+                                </div>
+                                <h5>Dmitry Ivaniuk</h5>
+                                <div class="text-column-subtitle">Web Developer</div>
+                                <div class="text-column-info">
+                                    Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-3 col-sm-3 col-xs-3">
+                            <div class="text-column text-column-centralized this-animate" data-animate="fadeIn">
+                                <div class="text-column-image">
+                                    <img src="assets/img/users/user12.jpg" alt="Nadia Ali" class="img-circle">
+                                </div>
+                                <h5>Nadia Ali</h5>
+                                <div class="text-column-subtitle">Singer &amp; Songwriter</div>
+                                <div class="text-column-info">
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-3 col-sm-3 col-xs-3">
+                            <div class="text-column text-column-centralized this-animate" data-animate="fadeIn">
+                                <div class="text-column-image">
+                                    <img src="assets/img/users/user13.jpg" alt="Brad Pitt" class="img-circle">
                                 </div>
                                 <h5>Brad Pitt</h5>
                                 <div class="text-column-subtitle">Actor &amp; Producer</div>
