--- a/views/patient_queue.handlebars
+++ b/views/patient_queue.handlebars
@@ -27,9 +27,7 @@
                     <table class="table datatable sortable">
                         <thead>
                         <tr>
-                            <th id="patientNum">#</th>
-                            <th id="patientFN">First name</th>
-                            <th id="patientLast">Last name</th>
+                            <th id="patientName">Name</th>
                             <th id="patientTel">Phone</th>
                             <th id="patientEmail">Email</th>
                             <th id="patientIn">Time in</th>
@@ -38,9 +36,7 @@
                         </thead>
                         {{#patients}}
                         <tr>
-                            <td></td>
                             <td>{{name}}</td>
-                            <td></td>
                             <td>{{phone_number}}</td>
                             <td>{{email}}</td>
                             <td>{{checkinTime}}</td>
