--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -171,7 +171,7 @@
                                 <div class="text-column-icon">
                                     <span class="fa fa-clock-o"></span>
                                 </div>
-                                <h4>Bussines Hours</h4>
+                                <h4>Business Hours</h4>
                                 <div class="text-column-info">
                                     <p><strong>Monday &mdash; Friday</strong>: 10:00am - 6:00pm</p>
                                     <p><strong>Saturday &mdash; Sunday</strong>: 10:00am - 2:00pm</p>
