added logentries js file and tests

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -10,6 +10,11 @@
     <!-- END META SECTION -->
 
     <link rel="stylesheet" type="text/css" href="css/styles.css" media="screen" />
+    <script src="/frontend/js/le.min.js"></script>
+    <script>
+        // Set up le.js
+        LE.init('02da12dd-d09a-4c93-86da-ec1deb507831');
+    </script>
 
 </head>
 
@@ -355,6 +360,10 @@
 
     <script type="text/javascript" src="js/actions.js"></script>
     <!-- ./page scripts -->
+
+    <script>
+        LE.log("Home page was loaded");
+    </script>
 </body>
 
 </html>
