--- a/views/account/login.handlebars
+++ b/views/account/login.handlebars
@@ -12,7 +12,16 @@
         
         <!-- CSS INCLUDE -->        
         <link rel="stylesheet" type="text/css" id="theme" href="css/theme-default.css"/>
-        <!-- EOF CSS INCLUDE -->                                     
+        <!-- EOF CSS INCLUDE -->
+
+        <!-- Scripts for Logentries -->
+        <script src="frontend/js/le.min.js"></script>
+        <script>
+            // Set up le.js
+            LE.init('02da12dd-d09a-4c93-86da-ec1deb507831');
+        </script>
+
+
     </head>
     <body>
         
@@ -67,7 +76,10 @@
             </div>
             
         </div>
-        
+        <script>
+            LE.log("Admin Login page was loaded");
+        </script>
+
     </body>
 </html>
 
