add home button

--- a/views/account/signup.handlebars
+++ b/views/account/signup.handlebars
@@ -15,7 +15,9 @@
         <!-- EOF CSS INCLUDE -->                                     
     </head>
     <body>
-        
+        <div class = "home-button">
+            <button type="button" class="btn btn-primary">Primary</button>
+        </div>
         <div class="login-container lightmode">
         
             <div class="login-box animated fadeInDown">
